package Entities.Services;

interface TypeClean {
    void getCost();

    void getPrice();
}
