public class S031RTY extends Robot{

    private final static String MODEL = "S031RTY";
    private final static String SURFACE = "N/A";
    private  final  static boolean CAN_ORDER = true;
    private  final  static boolean CAN_SHINE = false;
    private final static int COST = 2700;

    public S031RTY() {
        super(MODEL,SURFACE,CAN_ORDER,CAN_SHINE,COST);
    }
}
