import java.util.HashMap;

public class SearchRobot {
    private HashMap<String, Robot> robots;
    //private Request request;

    public Robot suitableRobot(Request request){
        return new S031RTY();
    }

    public Robot selectRobot(Request request){
        return new S031RTY();
    }

    public String compareRequests(){
        return "";
    }

    public String compareCost(){
        return "";
    }
}
